1. Bug fixed on pages Person: width of the right side from photo was to small with wrapping

--- a/src/styles/person.css
+++ b/src/styles/person.css
@@ -26,12 +26,19 @@
 .flex-item-photo {
 	text-align: center;
 	margin: 0 auto;
+
+	width: 35%;
+	min-width: 260px;
+	max-width: 700px;
+	flex-grow: 2;
 }
 .flex-item-works {
-	margin: 0 auto;
+	width: calc(60% - 3em);
+	flex-grow: 1;
 }
 
 .person-photo {
+	display: inline-block;
 	min-width: min(160px, 100%);
 	max-width: 320px;
 }
